# MarketPulseAI

./: .cursorignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: news_api_config.yaml  sentiment_analysis_config.yaml
config/cassandra/: schema.cql
config/database/: cassandra_schema.cql  cassandra_schema_dev.cql
config/grafana/provisioning/datasources/: cassandra.yaml  mongodb.yaml
config/kafka/: kafka_config.yaml
config/mongodb/: news_schema.js
config/reddit/: reddit_collector_config.yaml
config/spark/: reddit_sentiment_config.yaml  stock_processor_config.yaml
docs/: functional-requirements.md  news_api_integration.md
docs/architecture/: final_linkedin_post_detailed.mermaid  first_linkedin_post.mermaid  folder_structure.txt  marketpulseai-description-with-mongo.md  marketpulseai-description.md  system_architecture.mermaid
docs/architecture/data_schema/: index.md  mongodb_schema.md
docs/architecture/data_schema/examples/: reddit_sentiment_example.json  ticker_sentiment_example.json
docs/sentiment-analysis/: sentiment-analysis-draft.md  sentiment-analysis-plan.md  sentiment-analysis-strategy.md
src/common/messaging/: kafka_consumer.py  kafka_producer.py
src/common/validation/: __init__.py  base_service.py  base_validator.py
src/data_collection/: __init__.py  base_collector.py  collect_data.py  manager.py  models.py
src/data_collection/scripts/: run_news_collector.py
src/data_processing/: main.py  reddit_sentiment_analyzer.py
src/data_processing/common/: base_processor.py
src/data_processing/reddit/: sentiment_processor.py
src/data_processing/stock/: stock_processor.py
src/processing/market_data/: config.py  schemas.py  spark_job.py  utils.py
src/storage/database/: sentiment_store.py
src/utils/: config.py  logging.py
src/visualization/: streamlit_dashboard.py
(+48 files in other folders)
