[tool.poetry]
name = "marketpulseai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.54"
pydantic = "^2.10.6"
tweepy = {extras = ["async"], version = "^4.15.0"}
kafka-python = "^2.0.5"
loguru = "^0.7.3"
pyspark = "^3.5.5"
ruff = "^0.9.9"
transformers = "^4.50.0"
nltk = "^3.9.1"
emoji = "^2.14.1"
cassandra-driver = "^3.29.2"
polygon-api-client = "^1.14.4"
praw = "^7.8.1"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
